[gd_scene load_steps=2 format=3 uid="uid://cw3hmp7dupimt"]

[ext_resource type="Script" path="res://first_time_player/first_time_player_user_data.gd" id="1_lllra"]

[node name="FirstTimePlayerUserData" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lllra")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -155.0
offset_right = 337.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Set your username."
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.5
offset_top = -102.0
offset_right = 497.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "(This is distinct from the in-game username and cannot be changed.)"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -248.0
offset_right = 337.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
text = "Welcome to Kiki's Delivery!"
horizontal_alignment = 1

[node name="UsernameLineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -408.5
offset_top = -45.0
offset_right = 408.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
placeholder_text = "Your username here"
alignment = 1

[node name="StateLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -335.5
offset_top = 56.0
offset_right = 337.5
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="SetUsernameButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = 127.0
offset_right = 166.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Next"

[connection signal="pressed" from="SetUsernameButton" to="." method="_on_set_username_button_pressed"]
